--- a/src/main/webapp/modern/2015-02-02-revamped.adoc
+++ b/src/main/webapp/modern/2015-02-02-revamped.adoc
@@ -15,13 +15,13 @@ Over time I grew annoyed with Wordpress in particular.
 It is a pain to write posts offline on a flight, for instance.
 The syntax isn't particularly fun either.
 
-A few months ago I wrote my first article for https://nofluffjuststuff.com/home/magazine_subscribe[NFJS Magazine].
+A few months ago I wrote https://nofluffjuststuff.com/m/article/type_level_programming_in_scala_101_computation_at_compile_time[my first article for NFJS Magazine].
 This was my first exposure to http://asciidoctor.org/[Asciidoctor], and I quickly gained much appreciation for writing with it.
 That planted the first seeds of desire for a new way to write my blog posts.
 However, for me to use asciidoctor, I would have to write my own stuff.
 
 Shortly thereafter, I became inducted into the http://liftweb.net/team[Lift committers team].
-I already wanted to build everything web with Lift, but that shot in the arm encouraged me to... like... _really_ build everything with Lift, including my blog.
+I already enjoyed using Lift, and being part of the team gives me more motivation to find oppportunities to use it such as my blog and https://github.com/joescii/presentera[Presentera].
 Furthermore, it opened the door for me to https://github.com/lift/framework/pull/1652[enhance Lift to support ideas like Asciidcotor content]
 
 Finally, my work at http://www.mentor.com/[Mentor Graphics] had tossed me into the fire with AWS.
@@ -29,3 +29,5 @@ I've learned enough about AWS to confidently host enterprise applications, so ho
 This also created an opportunity for me to stretch my understanding of AWS infrastructure/deployment.
 I explored how I can use some open source tooling to manage my blog deployment using immutable infrastructure.
 Which leads right into the next series I'm going to launch: _From Commit to Deployment_
+In those upcoming posts, I plan to give a detailed explanation into how I automated deployment from checkin.
+
