--- a/src/main/webapp/modern/2015-02-02-revamped.adoc
+++ b/src/main/webapp/modern/2015-02-02-revamped.adoc
@@ -22,12 +22,14 @@ However, for me to use asciidoctor, I would have to write my own stuff.
 
 Shortly thereafter, I became inducted into the http://liftweb.net/team[Lift committers team].
 I already enjoyed using Lift, and being part of the team gives me more motivation to find oppportunities to use it such as my blog and https://github.com/joescii/presentera[Presentera].
-Furthermore, it opened the door for me to https://github.com/lift/framework/pull/1652[enhance Lift to support ideas like Asciidcotor content]
+Furthermore, it opened the door for me to https://github.com/lift/framework/pull/1652[enhance Lift to support ideas like Asciidoctor content]
 
 Finally, my work at http://www.mentor.com/[Mentor Graphics] had tossed me into the fire with AWS.
 I've learned enough about AWS to confidently host enterprise applications, so hosting my blog there is a walk in the park.
 This also created an opportunity for me to stretch my understanding of AWS infrastructure/deployment.
 I explored how I can use some open source tooling to manage my blog deployment using immutable infrastructure.
-Which leads right into the next series I'm going to launch: _From Commit to Deployment_
+Which leads right into the next series I'm going to launch: _From Commit to Deployment_.
 In those upcoming posts, I plan to give a detailed explanation into how I automated deployment from checkin.
 
+So what do you think about it?
+Drop me a line!
