--- a/src/main/webapp/modern/2015-05-25-wdp-not-a-framework.adoc
+++ b/src/main/webapp/modern/2015-05-25-wdp-not-a-framework.adoc
@@ -1,5 +1,5 @@
 :keywords: web-development-principles, web-development, functional-programming
-:description:
+:description: I begin exploring my own thoughts about web application development tooling by suggesting we don't need a big framework
 :published: 2015-05-25T12:00:00-0500
 :updated: 2015-05-25T12:00:00-0500
 
